--- a/Tasks/Task/index.html
+++ b/Tasks/Task/index.html
@@ -3,27 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>task1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   </head>
   <body>
    
-    <div class="w-50 p-5 mx-auto mt-5 shadow text-center">
-        <h1 class="mb-3 text-decoration-underline">Task 1</h1>
+    <div class="w-50 p-5 mx-auto mt-5 shadow text-center" style="background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
+">
+        <h1 class="mb-3 text-decoration-underline" style="font-family: initial;">USER ID</h1>
         <input id="input-num1" type="text" class="form-control mb-3" placeholder="enter Username">
         <input id="input-num2" type="text" class="form-control mb-3" placeholder="enter emall">
         <input id="input-num3" type="text" class="form-control mb-3" placeholder="enter phone no">
 
 
         <button onclick="checkData()" class="btn btn-success w-100 mb-2">Submit</button>
-    </div>
-         <div class="w-50 p-5 mx-auto mt-5 shadow text-center" style="height: 450px;">
-            <h4 id="Username"></h4>
-            <h4 id="emall"></h4>
-            <h4 id="phoneno"></h4>
+
+
+          <div class="w-50 p-5 mx-auto mt-5  text-center" style="height: 450px;">
+            <h4 id="Username" style="font-family: initial; font-size: 45px; color: black;"></h4>
+            <h4 id="emall" style="font-family: initial; font-size: 45px; color: black;"></h4>
+            <h4 id="phoneno" style="font-family: initial; font-size: 45px; color: black;"></h4>
 
 
          </div>
+    </div>
+       
 
 
 
