--- a/Tasks/task2/index.html
+++ b/Tasks/task2/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <div class="w-50 p-5 mx-auto mt-5 shadow text-center">
+    <div class="w-50 p-5 mx-auto mt-5 shadow text-center" style="background: linear-gradient(136deg,rgba(131, 58, 180, 1) 0%, rgba(179, 96, 96, 1) 50%, rgba(252, 176, 69, 1) 100%);
+">
       <h1 class="text-center text-dark">Calculator</h1>
 
         <!-- Corrected input IDs -->
