--- a/Tasks/task4/index.html
+++ b/Tasks/task4/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <div class="w-50 p-5 mx-auto mt-5 shadow text-center">
+    <div class="w-50 p-5 mx-auto mt-5 shadow text-center" style="background: radial-gradient(circle,rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
+">
         <h1 class="text-center text-dark">Calculator</h1>
 
         <input id="num1" type="text" class="form-control mb-2" placeholder="Enter first number">
