--- a/Tasks/task3/index.html
+++ b/Tasks/task3/index.html
@@ -1,8 +1,4 @@
 
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,8 +11,10 @@
 </head>
 
 <body>
-    <div class="w-50 p-5 mx-auto mt-5 shadow text-center">
-      <h1 class="text-center text-dark">Calculator</h1>
+    <div class="w-50 p-5 mx-auto mt-5 shadow text-center" style="background: radial-gradient(circle,rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+;
+">
+      <h1 class="text-center" style="color: rgb(15, 1, 27);font-size: 75px;">Calculator</h1>
 
         <!-- Corrected input IDs -->
         <input id="num1" type="text" class="form-control mb-2" placeholder="Enter first number">
@@ -29,10 +27,10 @@
 
       
 <div class="text-dark" style="font-size: 20px;" >
-    <input type="radio"  name="cals"  onchange="sum(1)"><b> +</b>
-    <input type="radio"  name="cals"  onchange="sum(2)"><b> -</b>
-    <input type="radio"  name="cals"   onchange="sum(3)"><b> *</b>
-    <input type="radio"  name="cals"   onchange="sum(4)"><b> /</b>
+    <input style="height: 25px; width: 25px;;" type="radio"  name="cals"  onchange="sum(1)"><b  style="font-size: 30px; ;"> +</b>
+    <input style="height: 25px; width: 25px;;"  type="radio"  name="cals"  onchange="sum(2)"><b style="font-size: 30px; ;"> -</b>
+    <input style="height: 25px; width: 25px;;"  type="radio"  name="cals"   onchange="sum(3)"><b style="font-size: 30px; ;"> *</b>
+    <input style="height: 25px; width: 25px;;"   type="radio"  name="cals"   onchange="sum(4)"><b  style="font-size: 30px; ;"> /</b>
 
 </div>
 
