--- a/Tasks/task5/index.html
+++ b/Tasks/task5/index.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-  <div class="w-50 p-5 mx-auto mt-5 shadow text-center">
+  <div class="w-50 p-5 mx-auto mt-5 shadow text-center" style="background: linear-gradient(90deg,rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+">
     <h1 class="text-center text-dark">Calculator</h1>
 
     <input id="num1" type="text" class="form-control mb-2" placeholder="Enter first number" />
     <input id="num2" type="text" class="form-control mb-2" placeholder="Enter second number" />
 
-    <div class="text-dark mb-3" style="font-size: 18px;">
+    <div class="text-dark mb-3" style="font-size: 18px; font-weight: bold;">
       <label class="form-check">
         <input type="checkbox" name="operation" value="1" class="form-check-input" onclick="onlyOne(this)" /> Addition (+)
       </label>
