--- a/Tasks/task3/index.html
+++ b/Tasks/task3/index.html
@@ -11,14 +11,12 @@
 </head>
 
 <body>
-    <div class="w-50 p-5 mx-auto mt-5 shadow text-center" style="background: radial-gradient(circle,rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
-;
-">
+    <div class="w-50 p-5 mx-auto mt-5 shadow text-center" style="background: radial-gradient(circle,rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);">
       <h1 class="text-center" style="color: rgb(15, 1, 27);font-size: 75px;">Calculator</h1>
 
         <!-- Corrected input IDs -->
-        <input id="num1" type="text" class="form-control mb-2" placeholder="Enter first number">
-        <input id="num2" type="text" class="form-control mb-2" placeholder="Enter second number">
+        <input id="num1" type="text" class="form-control mb-4 " placeholder="Enter first number">
+        <input id="num2" type="text" class="form-control mb-3" placeholder="Enter second number">
 
 
 
